--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,11 +1,11 @@
-name: Publish Python 🐍 distributions 📦 to TestPyPI
+name: Publish Python 🐍 distributions 📦 to PyPI 
 
 on: 
   workflow_call:
 
 jobs:
   build-n-publish:
-    name: Build and publish Python 🐍 distributions 📦 to TestPyPI
+    name: Build and publish Python 🐍 distributions 📦 to PyPI 
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
@@ -27,10 +27,10 @@ jobs:
         --wheel
         --outdir dist/
         .
-    - name: Publish distribution 📦 to Test PyPI
+
+    - name: Publish distribution 📦 to PyPI
+      if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@master
       with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
-
+        password: ${{ secrets.PYPI_API_TOKEN }}
 
