--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -7,6 +7,7 @@ on:
         python-version:
             description: "Version range or exact version of a Python version to use, using SemVer's version range syntax."
             default: '3.9'
+            type: string
 
 jobs:
   build-n-publish:
