--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -16,16 +16,19 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Set up Python 
+      if: startsWith(github.ref, 'refs/tags')
       uses: actions/setup-python@main
       with:
         python-version: ${{ inputs.python-version }}
     - name: Install pypa/build
+      if: startsWith(github.ref, 'refs/tags')
       run: >-
         python -m
         pip install
         build
         --user
     - name: Build a binary wheel and a source tarball
+      if: startsWith(github.ref, 'refs/tags')
       run: >-
         python -m
         build
